--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@
 # https://rasa.com/docs/rasa/nlu/components/
 language: en
 
-pipeline:
+pipeline: supervised_embeddings
 # # No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
 # # If you'd like to customize it, uncomment and adjust the pipeline.
 # # See https://rasa.com/docs/rasa/tuning-your-model for more information.
@@ -31,9 +31,9 @@ policies:
 # # No configuration for policies was provided. The following default policies were used to train your model.
 # # If you'd like to customize them, uncomment and adjust the policies.
 # # See https://rasa.com/docs/rasa/policies for more information.
-#   - name: MemoizationPolicy
-#   - name: TEDPolicy
-#     max_history: 5
-#     epochs: 100
+  - name: MemoizationPolicy
+  - name: EmbeddingPolicy
+    max_history: 5
+    epochs: 100
 #     constrain_similarities: true
 #   - name: RulePolicy
