--- a/data/stories.yml
+++ b/data/stories.yml
@@ -28,3 +28,8 @@ stories:
   - action: utter_did_that_help
   - intent: deny
   - action: utter_goodbye
+
+- story: query knowledgebase
+  steps:
+  - intent: query_knowledge_base
+  - action: action_query_knowledge_base
