v2: extension functionalities chatbot

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -1,6 +1,271 @@
 version: "2.0"
 
 nlu:
+
+### CUSTOM INTENTS ###
+- intent: ask_howbuilt
+  examples: |
+    - How did they build you?
+    - How were you constructed?
+    - in what way were you made?
+    - How did you come to be?
+    - Can you explain how you were created?
+    - By what means were you made?
+    - Do you know how you were made?
+    - What process was used to build you?
+    - How did you come into being?
+    - How were you made?
+
+- intent: ask_howdoing
+  examples: |
+    - What's up man
+    - how's your day going
+    - How are you?
+    - are you having a good day
+    - How's life treating you friend?
+    - how are u
+    - Do you feel good?
+    - how are you feeling
+    - how have you been
+    - are you alright
+    - How've you been?
+    - Is everything ok?
+
+- intent: ask_howold
+  examples: |
+    - What is your age?
+    - what year were you born?
+    - when is your birthday?
+    - what age are you
+    - Tell me your birthday.
+    - how old?
+    - How old are you?
+
+- intent: ask_time
+  examples: |
+    - What is the time?
+    - Hi, I need the time.
+    - Can you tell me what time it is?
+    - Give me the time.
+    - What's the time right now?
+    - what time it is
+    - Time?
+    - do you know the time?
+
+- intent: ask_weather
+  examples: |
+    - how is the weather?
+    - Will the skies be clear today?
+    - Is it humid out there today?
+    - what's the weather like where you are?
+    - what's the weather
+    - Nice day out today?
+    - is it sunny?
+    - how's the weather?
+
+- intent: ask_whatspossible
+  examples: |
+    - so now what
+    - um what now
+    - hm that doesnt quite help me is there anything else you can do?
+    - help please
+    - what are you good at?
+    - options
+    - cool! can I do something else here?
+    - what can you do?
+    - what else can you do?
+    - Can you do something else?
+    - Is there other thing you can do?
+    - something else
+    - so
+    - what now?
+    - and
+    - and...
+    - and now what
+    - which functions are included
+    - Which are your functionalities
+    - what now
+    - can you give something else
+    - is it all?
+    - it's all?
+    - that's all?
+    - is that all?
+    - can you help me in other way?
+    - do you have more functions?
+    - something different to try?
+    - may I try something else
+    - might I try something different?
+    - other choice?
+    - other recommendation.
+    - what next
+    - Hum...
+    - More
+
+- intent: recommendation
+  examples: |
+    - Any good recommendation?
+    - Can you find a recomendation for me?
+    - Can you find me a recommendation?
+    - Can you recommend an activity?
+    - Could you find an activity for me?
+    - Find a recommendation for me
+    - Find me an activity
+    - Help me find ideas to spend time
+    - Help me with finding original ideas to spend time
+    - Hey help me find things to do
+    - Hey, can you help me with activities
+    - I am bored, find me activities to do
+    - I need a new activity
+    - I need a recommendation.
+    - I need to find something to do
+    - I'm gonna need help finding things to do
+    - Recommend me activities
+    - Suggest me a good activity
+    - Suggest me things to do
+    - Would you find me an activity?
+    - can you suggest things to do
+    - help me find activities
+    - show me what can I do
+    - tell me what to do
+    - I dont know what to do.
+    - jesus, give me something to do
+    - What should I do during the confinement?
+    - What can I do to spent the time?
+    - I want some fun.
+    - I want some funny recommendation.
+    - some fun, please.
+    - recommend me something else
+    - another recommendation please
+
+- intent: nicetomeetyou
+  examples: |
+    - Delighted to make your acquaintance.
+    - Feels great to see you!
+    - Glad to make your acquaintance.
+    - Glad to meet you
+    - Glad to meet you!
+    - Glad to meet you.
+    - Glad we've met.
+    - Good to meet you!
+    - Good to see you!
+    - Great interacting with you
+    - Great seeing you
+    - Great to meet you!
+    - Great to meet you.
+    - Happy to get to see you.
+    - Hi, glad to meet you.
+    - Hi, nice to meet you!
+    - I am glad I met you.
+    - I had a great meeting with you
+    - I'm glad to have met you!
+    - I'm glad to meet you!
+    - I'm happy that we have met!
+    - I'm pleased to meet you!
+    - I'm so happy that I could meet you.
+    - I'm thrilled to meet you!
+    - It is indeed a pleasure to be able to meet you.
+    - It was a pleasure to have your company.
+    - It was nice to have met you
+    - It's a pleasure to make your acquaintance!
+    - It's a pleasure to meet you!
+    - It's good that I could meet you. It was a pleasure.
+    - It's great to get to know you!
+    - It's great to make your acquaintance!
+    - It's nice to finally meet you.
+    - It's wonderful to meet you!
+    - It’s a pleasure to meet you
+    - It’s great connecting with you.
+    - Lovely to meet you.
+    - Nice to have met you.
+    - Pleased to make your acquaintance!
+    - Pleased to meet you!
+    - Pleased to meet you.
+    - See you around. It was a pleasure meeting you.
+    - Thank you for this meeting. It was great to see you.
+    - nice to meet you
+
+- intent: thanks
+  examples: |
+    - Cool. Thanks
+    - Great, thanks
+    - Thank you
+    - Thank you so much
+    - Thank's!
+    - Thanks
+    - Thanks bot
+    - Thanks for that
+    - Thanks!
+    - amazing, thanks
+    - cheers
+    - cheers bro
+    - cool thank you
+    - cool thanks
+    - cool, thanks
+    - danke
+    - great thanks
+    - ok thanks
+    - ok thanks sara
+    - ok thanks!
+    - perfect thank you
+    - thank u
+    - thank you
+    - thank you anyways
+    - thanks
+    - thanks a bunch for everything
+    - thanks a lot
+    - thanks for the help
+    - thanks this is great news
+    - thanks you
+    - thanks!
+    - thankyou
+    - thnks
+    - thx
+    - yes thanks
+
+- intent: telljoke
+  examples: |
+    - Can you tell a joke?
+    - Can you tell me a joke.
+    - Come up with a joke you think I'll find funny.
+    - Could you please share a joke with me.
+    - Could you tell me a joke.
+    - Do you have any jokes?
+    - Do you know any jokes?
+    - Entertain me with a joke.
+    - Give me a funny joke.
+    - Give me a joke.
+    - Give me some comic relief.
+    - I need a good joke.
+    - I want to hear something funny.
+    - Know any jokes?
+    - Let's hear a joke from you.
+    - Make me laugh.
+    - Please tell me a joke.
+    - Say something funny.
+    - Share a joke with me!
+    - Tell joke.
+    - Tell me something funny.
+    - Tell me something humorous!
+    - Tell me something that you think will make me laugh.
+    - Tell me the best joke you know.
+    - What's a good joke?
+    - Will you tell me a joke.
+    - Would you share a joke with me.
+    - Would you tell me a joke
+    - give me a good joke
+    - make me laugh with a bad joke
+    - make me laugh with a joke
+    - say a funny joke
+    - say a joke
+    - say a joke that's funny
+    - say a joke that's so bad it's funny
+    - tell me a joke
+    - tell me a short joke
+    - tell me a story joke
+    - tell me something funny, like a joke
+    - you can say a jok
+
+### BASIC INTENTS ###
 - intent: greet
   examples: |
     - hey
@@ -16,6 +281,126 @@ nlu:
     - goodmorning
     - goodevening
     - good afternoon
+    - Bom dia
+    - Bonjour
+    - Good Morning
+    - Good morning
+    - Good mourning
+    - Guten Morgen
+    - HELLO
+    - HEY
+    - HEllo
+    - HI
+    - Hallo
+    - Hei
+    - Hellllooooooo
+    - Hello
+    - Hello Bot
+    - Hello!
+    - Hey
+    - Hey bot
+    - Heya
+    - Heylo
+    - Hi
+    - Hi bot
+    - Hi man
+    - Hi there
+    - Hi!
+    - Hi'
+    - Hi,
+    - Hi, bot
+    - Hieee
+    - Hieeeeeeeeeeeee
+    - Hola
+    - I said, helllllloooooO!!!!
+    - Well hello there ;)
+    - What is up?
+    - Whats up
+    - Whats up my bot
+    - Whats up?
+    - ayyyy whaddup
+    - bonjour
+    - ey boss
+    - good evening
+    - good moring
+    - good morning
+    - greet
+    - greetings
+    - hai
+    - hallo
+    - halloo
+    - halloooo
+    - halo
+    - heeey
+    - heelio
+    - hell9o
+    - hellio
+    - hello
+    - hello everybody
+    - hello friend
+    - hello hi
+    - hello is anybody there
+    - hello it is me again
+    - hello robot
+    - hello sweatheart
+    - hello sweet boy
+    - hello there
+    - hello world
+    - hello?
+    - hello]
+    - hellooo
+    - helloooo
+    - helo
+    - hey
+    - hey bot
+    - hey bot!
+    - hey dude
+    - hey hey
+    - hey let's talk
+    - hey ther
+    - hey there
+    - hey there boy
+    - hey there..
+    - hey, let's talk
+    - heya
+    - heyho
+    - heyo
+    - hhola
+    - hi
+    - hi !
+    - hi Mister
+    - hi again
+    - hi can you speak ?
+    - hi folks
+    - hi friend
+    - hi friends
+    - hi hi
+    - hi pal!
+    - hi sara
+    - hi there
+    - hi there it's me
+    - hi!
+    - hi?
+    - hieee
+    - hii
+    - hiihihi
+    - hiii
+    - hlo
+    - hola
+    - howdy
+    - jojojo
+    - jop
+    - konichiwa
+    - merhaba
+    - salut
+    - sup
+    - wasssup
+    - wasssup!
+    - what up
+    - whats popping
+    - whats up
+    - yo
+    - yoo
 
 - intent: goodbye
   examples: |
@@ -30,6 +415,43 @@ nlu:
     - see you around
     - bye bye
     - see you later
+    - adios
+    - adios?
+    - bye
+    - bye .
+    - bye :P
+    - bye bot
+    - bye bye
+    - bye bye bot
+    - bye for now
+    - bye udo
+    - bye was nice talking to you
+    - bye!
+    - byee
+    - catch you later
+    - ciao
+    - cya
+    - farewell
+    - good bye
+    - good bye rasa bot!
+    - good night
+    - goodbye
+    - goodbye.
+    - goodnight
+    - gotta go
+    - k byyye #slay
+    - ok Bye
+    - ok bye
+    - ok, bye
+    - ok.bye
+    - see u later
+    - see ya
+    - see you
+    - see you . bye
+    - take care
+    - then bye
+    - tlak to you later
+    - toodle-oo
 
 - intent: affirm
   examples: |
@@ -39,6 +461,225 @@ nlu:
     - of course
     - that sounds good
     - correct
+    - I accept
+    - I accept.
+    - I agree
+    - I am using it
+    - I changed my mind. I want to accept it
+    - I do
+    - I get it
+    - I guess so
+    - I have used it in the past
+    - I will
+    - I'd absolutely love that
+    - I'm sure I will!
+    - I'm using it
+    - Nice
+    - OK
+    - Ofcourse
+    - Oh yes
+    - Oh, ok
+    - Ok
+    - Ok let's start
+    - Ok.
+    - Okay
+    - Okay!
+    - PLEASE
+    - SURE
+    - Sure
+    - Sweet
+    - That would be great
+    - YES
+    - YUP
+    - Yea
+    - Yeah
+    - Yeah sure
+    - Yep
+    - Yep that's fine
+    - Yep!
+    - Yepp
+    - Yes
+    - Yes I do
+    - Yes please
+    - Yes please!
+    - Yes, I accept
+    - Yes.
+    - Yup
+    - a little
+    - absolutely
+    - accept
+    - accepted
+    - agreed
+    - ah ok
+    - alright
+    - alright, cool
+    - amayzing
+    - amazing!
+    - awesome
+    - awesome!
+    - confirm
+    - cool
+    - cool :)
+    - cool story bro
+    - cool!
+    - coolio
+    - definitely yes without a doubt
+    - done
+    - fair enough
+    - fcourse
+    - fine
+    - fuck yeah!
+    - go
+    - go ahead
+    - go for it
+    - going super well
+    - good
+    - good.
+    - great
+    - great lets do that
+    - great!
+    - hell yeah
+    - hell yes
+    - hm, i'd like that
+    - how nice!
+    - i accept
+    - i agree
+    - i am!
+    - i want that
+    - i will!
+    - it is ok
+    - it's okay
+    - ja
+    - ja cool
+    - ja thats great
+    - jezz
+    - jo
+    - k
+    - kk
+    - lets do it
+    - lets do this
+    - nice
+    - not bad
+    - of course
+    - ofcoure i do
+    - ofcourse
+    - oh awesome!
+    - oh cool
+    - oh good !!
+    - oh super
+    - ok
+    - ok cool
+    - ok fine
+    - ok friend
+    - ok good
+    - ok great
+    - ok i accept
+    - ok sara
+    - ok, I behave now
+    - ok, I understood
+    - ok, Sara
+    - ok...
+    - okay
+    - okay cool
+    - okay sure
+    - okay..
+    - oki doki
+    - okie
+    - ook
+    - oui
+    - perfect
+    - please
+    - si
+    - sort of
+    - sure
+    - sure thing
+    - sure!
+    - that is cool
+    - that ok
+    - that sounds fine
+    - that's great
+    - thats fine
+    - thats good
+    - thats great
+    - top
+    - uh-huh
+    - very much
+    - well yes
+    - why not
+    - lol
+    - ya
+    - ya cool
+    - ya go for it
+    - ya i want
+    - ya please
+    - ya thats cool
+    - yaah
+    - yap
+    - yaps
+    - yas
+    - yay
+    - ye
+    - ye splease
+    - yea
+    - yeah
+    - yeah do that
+    - yeah sure
+    - yeah'=
+    - yeah, why not
+    - yeeeeezzzzz
+    - yeeees
+    - yep
+    - yep i want that
+    - yep if i have to
+    - yep please
+    - yep that's nice
+    - yep thats cool
+    - yep, will do thank you
+    - yep. :/
+    - yes
+    - yes ...
+    - yes I do
+    - yes accept please
+    - yes baby
+    - yes cool
+    - yes give me information
+    - yes go ahead
+    - yes go for it
+    - yes great
+    - yes i accept
+    - yes i agree
+    - yes i have built a bot before
+    - yes i have!
+    - yes it is
+    - yes it was okay
+    - yes of course
+    - yes pleae
+    - yes please
+    - yes please!
+    - yes pls
+    - yes sirfr
+    - yes that's great
+    - yes that's what i want
+    - yes you can
+    - yes'
+    - yes, I'd love to
+    - yes, cool
+    - yes, give me information, please
+    - yes,i am
+    - yes.
+    - yesh
+    - yess
+    - yessoo
+    - yesss
+    - yesssss
+    - yesyestyes
+    - yesyesyes
+    - yez
+    - yop
+    - yres
+    - ys
+    - yup
+    - yyeeeh
 
 - intent: deny
   examples: |
@@ -49,6 +690,93 @@ nlu:
     - don't like that
     - no way
     - not really
+    - NEIN
+    - NO
+    - NO DON"T WANT THIS!
+    - Nah
+    - Neither
+    - Never
+    - Nevermind
+    - No
+    - No thank you
+    - No, not really.
+    - No, thank you
+    - No.
+    - Nopes
+    - Not really
+    - absolutely not
+    - decline
+    - definitely not
+    - deny
+    - i decline
+    - i don not like this
+    - i don't think so
+    - i don't want either of those
+    - i don't want to
+    - i don't want to give you my email
+    - i dont want to
+    - i dont want to accept
+    - i guess it means - no
+    - i'm afraid not
+    - i'm not sure
+    - it is going pretty badly
+    - it sucks
+    - it sux
+    - na
+    - nah
+    - nah I'm good
+    - nah not for me
+    - nah, first time
+    - nah, i'm good
+    - nehi
+    - nein
+    - neither
+    - never
+    - never mind
+    - no
+    - no :(
+    - no I dont want
+    - no and no again
+    - no bots at all
+    - no go
+    - no i can't
+    - no i don't accept
+    - no i dont want to
+    - no i dont want to accept
+    - no i won't
+    - no ma'am
+    - no sir
+    - no sorry
+    - no thank s
+    - no thank you
+    - no thanks
+    - no way
+    - no you did it wrong
+    - no!!!!
+    - no, i hate it
+    - no, my frst time
+    - no, thank you
+    - no, thanks
+    - no, thankyou
+    - non
+    - noooooooooo
+    - noooooooooooooooooooooooooooooooooooooooo
+    - nop
+    - nope
+    - nope!
+    - nope. i am good
+    - not going well at all
+    - not really
+    - not right now
+    - not yet
+    - nö
+    - sorry not right now
+    - still dont want to tell
+    - thanks but no thanks
+    - this sucks
+    - very bad
+    - no stop
+    - stop it, i do not care!!!
 
 - intent: mood_great
   examples: |
@@ -66,6 +794,29 @@ nlu:
     - so so perfect
     - so good
     - so perfect
+    - :)
+    - :D
+    - I am happy
+    - nice
+    - WOW
+    - Wow
+    - nice.
+    - really cool
+    - happy
+    - i am feeling happy
+    - i am happy
+    - i am happy today
+    - it's pretty cool
+    - today was a nice day
+    - wow
+    - awesome
+    - cool
+    - cool man
+    - doin great
+    - funny
+    - great
+    - pretty cool :D
+    - ok
 
 - intent: mood_unhappy
   examples: |
@@ -83,6 +834,26 @@ nlu:
     - extremly sad
     - so saad
     - so sad
+    - I am feeling bad
+    - I am sad
+    - I am super sad
+    - I'm sad
+    - I'm super sad
+    - Now I'm sad
+    - This is bad
+    - bad
+    - crappy joke
+    - i am feel sad
+    - i am sad
+    - i am sad about that
+    - i am very sad
+    - i feel sad
+    - i sad
+    - i'm sad
+    - sad
+    - so sad :(
+    - super sad
+    - very very sad
 
 - intent: bot_challenge
   examples: |
@@ -98,25 +869,18 @@ nlu:
 
 - intent: query_knowledge_base
   examples: |
-    - i would kike the list of [universities](list_university) in [USA](object_type) please
-    - i dont know which [universities](list_university) are in [France](object_type)
-    - which [universities](list_university) can i find in [New York](city)?
-    - give me the list of [universities](list_university) in [Barcelona](city)
-    - list of [universities](list_university) in [Germany](object_type)
-    - [universities](list_university) in [last](mention:LAST)
-    - in which [country](country) is [Cornell University](object_type:USA) located?
-    - [IMT Atlantique](object_type:France) is in which [country](country)?
-    - give me the [country](country) of [Madrid](city)
-    - [ETH Zurich - Swiss Federal Institute of Technology](object_type:Switzerland) is in which [country](country)?
-    - where is [Columbia University](object_type:USA)?
+    - give me the list of [cities](object_type)
+    - i would kike the list of universities in [USA](object_type) please
+    - i dont know which universities are in [France](object_type)
+    - which universities can i find in [New York](city)?
+    - give me the list of universities in [Barcelona](city)
+    - list of universities in [Germany](object_type)
     - in which [city](attribute) is [EPFL](object_type:Switzerland)?
     - in which [city](attribute) is [this](mention)?
     - [IMT Atlantique](object_type:France) is in which [city](attribute)?
-    - give me the [city](attribute) of the [best university](attribute:ranking) in [France](object_type)
     - what [careers](attribute) are there in [University of Lausanne](object_type:Switzerland)? 
     - what [careers](attribute) can i find in [this](mention) university?
     - list of [careers](attribute) in [five one](mention:5)
-    - give me the [careers](attribute) in the [best university](attribute:ranking) in [Switzerland](object_type).
     - tell me all [careers](attribute) in [Universidad Autonoma de Madrid](object_type:Spain)
     - show [careers](attribute) in [King's College London](object_type:UK), please
     - what is the [link](attribute) of the [Technical University of Munich](object_type:Germany)?
@@ -147,16 +911,6 @@ nlu:
     - how much do i have to [pay](attribute:cost) to [finance](attribute:scholarship) my career in [University of Rennes 1](object_type:France)?
     - how much it [costs](attribute:cost) to go to [Universite de Bretagne Occidentale](object_type:France)?
     - how much it [costs](attribute:cost) to go to [UBO](object_type:France)?
-#- i want to go to [IMT Atlantique](object_type:France), how can I do that?
-
-- lookup: country
-  examples: |
-    - Spain
-    - UK
-    - USA
-    - France
-    - Switzerland
-    - Germany
 
 - lookup: USA
   examples: |
@@ -210,9 +964,23 @@ nlu:
     - EPFL
     - University of Lausanne
 
-- synonym: city
+- lookup: cities
   examples: |
-    - cities
+    - New york
+    - California
+    - Paris
+    - Brest
+    - Rennes
+    - London
+    - Edinburgh
+    - Manchester
+    - Munich
+    - Berlin
+    - Barcelona
+    - Madrid
+    - Valencia
+    - Zürich
+    - Lausanne
 
 - synonym: ranking
   examples: |
