--- a/domain.yml
+++ b/domain.yml
@@ -32,6 +32,12 @@ entities:
   - mention
   - ranking
   - name
+  - USA
+  - France
+  - UK
+  - Germany
+  - Spain
+  - Switzerland
 
 slots:
   object_type:
